added UI and UI functionality

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <script type="text/javascript" src="javascript/rockpaperscissors.js"></script>
+        <script type="text/javascript" src="javascript/rockpaperscissors.js" defer></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="main">
+            <div class="currentScore">
+
+            </div>
+            <div class="choices">
+                <button class="rock">Rock</button>
+                <button class="paper">Paper</button>
+                <button class="scissors">Scissors</button>
+            </div>
+            <div class="result">
+    
+            </div>
+        </div>
+
+        <div class="completedGame">
+            <div class="announcement"></div>
+            <button class="playAgain">Play Again!</button>
+        </div>
         
     </body>
 </html>
