--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header class="title">ROCK, PAPER, SCISSORS</header>
         <div class="main">
-            <div class="currentScore">
+            <div class="currentScore"></div>
 
-            </div>
             <div class="choices">
-                <button class="rock">Rock</button>
-                <button class="paper">Paper</button>
-                <button class="scissors">Scissors</button>
+                <button class="rock"><img src="./rock.jpg"></button>
+                <button class="paper"><img src="./paper.jpg"></button>
+                <button class="scissors"><img src="./scissors.jpg"></button>
             </div>
-            <div class="result">
-    
-            </div>
+
+            <div class="result"></div>
+            <div></div>
         </div>
 
         <div class="completedGame">
@@ -28,5 +28,6 @@
             <button class="playAgain">Play Again!</button>
         </div>
         
+        <footer>The Odin's Project: Rock, Paper, Scissors</footer>
     </body>
 </html>
